main.css
html {
    scroll-behavior: smooth;
}

body {
    margin: 0px;
    padding: 0px
}

li,
a {
    text-decoration: none;
    list-style: none;
    color: #000;
    font-family: 'Quicksand'
}

.break {
    display: block;
}

.modal-dialog {
    background-color: #DEDFE5;
}

#submitBtn {
    background-color: #7093A7;
    color: white;
}

#closeBtn {
    background-color: #292929;
    color: white;
}

#dev {
    color: #7093A7;
    z-index: 9000;
}

#myModal {
    border-radius: 12px;
}

#landing-page {

    width: 80%;
    display: flex;
    flex-direction: row;
    justify-content: space-around
}

.main {
    background-color: #DEDFE5;
    height: 85vh;
}

.airplaneIcon {
    height: 250px
}

.chip {
    background-color: #292929;
    padding: 20px !important;
    width: 60%;
    font-size: 16px;
    cursor: pointer;
    border: none
}

.circle {
    background-color: #7093A7;
    height: 500px;
    width: 500px;
    border-radius: 50%;
    margin-left: -70px;
    margin-top: 20px;
}

.jordan {
    margin-top: -78px;
    margin-left: 15px;
    height: 580px
}

.heading {
    font-size: 50px;
}

.chipText {
    font-size: 16px;
    margin-top: 0px;
    margin-bottom: 0px;
}

#services {
    width: 80%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin: auto;
    margin-top: 25px;
}

#about {
    width: 80%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin: auto;
    margin-top: 25px;
}

#testimonials {
    background-color: #f7f7f7;
    height: 200px
}

#serviceList {
    width: 40%;
    margin-bottom: 200px;
}

#highlight {
    background-color: #7093A7;
    height: 18px;
    margin-top: -63px;
    border-radius: 5px;
    margin-bottom: 15px;
    width: 90%;
    margin-left: 20px;
    opacity: 0.3;
}

#highlight2 {
    background-color: #7093A7;
    height: 18px;
    border-radius: 5px;
    margin-bottom: 15px;
    width: 77%;
    padding-left: 30px;
    margin: auto;
    margin-top: -63px;
    opacity: 0.3;
}

#serviceListItems {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

#industries {
    background-color: #f7f7f7;
    width: 100%;
    padding-bottom: 20px
}

#imgcontainer {
    padding-top: 20px;
    width: 80%;

}

#education {
    background-image: url('./education.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    height: 200px;
    width: 350px;
    color: white;
    border-radius: 6px;
    text-align: center;

}

#finance {
    background-image: url('./finance.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    height: 200px;
    width: 350px;
    color: white;
    border-radius: 6px;
    text-align: center;

}

#food {
    background-image: url('./food3.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    height: 200px;
    width: 350px;
    color: white;
    border-radius: 6px;
    text-align: center;

}

#freight {
    background-image: url('./freight2.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    height: 200px;
    width: 350px;
    color: white;
    border-radius: 6px;
    text-align: center;

}

#tech {
    background-image: url('./tech.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    height: 200px;
    width: 350px;
    color: white;
    border-radius: 6px;
    text-align: center;

}

#footer {
    background-color: #7093A7;
    padding-bottom: 10px
}


@media only screen and (max-width: 767px) {
    #serviceImage {
        display: none;
    }

    #serviceListItems {
        display: flex;
        flex-direction: row;
        justify-content: center;
    }

    .main {
        background-color: #DEDFE5;
        position: center;
        background-size: cover;
        height: 100vh;
        width: 100%;
        overflow-x: hidden;
    }

    .break {
        display: none;
    }

    .jordan {
        margin-top: -54px;
        height: 400px;
        margin-left: -10px
    }

    .chipText {
        font-size: 16px;
        font-weight: 400;
        margin-top: 3px;
        margin-bottom: 3px;
    }

    .chip {
        background-color: #292929;
        padding: 15px !important;
        width: 100%;
        cursor: pointer;
        margin: auto;
        position: relative;
        top: 340px
    }

    .circle {
        background-color: #7093A7;
        height: 300px;
        width: 300px;
        border-radius: 50%;
        margin-top: -150px;
        margin-left: 1px;
    }

    .heading {
        font-size: 20px;
    }

    /* Add styles for screens smaller than 768 pixels (phones) here */
    #landing-page {
        margin: auto;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }

    .airplaneIcon {
        display: none;
    }

    #serviceList {
        width: 100%;
    }

    #highlight {
        background-color: #7093A7;
        height: 18px;
        margin-top: -63px;
        border-radius: 5px;
        margin-bottom: 15px;
        width: 90%;
        margin-left: 20px;
    }

}

/* Add any styles for medium-sized screens here */
@media only screen and (min-width: 768px) and (max-width: 1023px) {

    /* Add styles for screens between 768 and 1024 pixels (tablets) here */
    #landing-page {
        display: flex;
        flex-direction: column;
        justify-content: center;
    }

    .airplaneIcon {
        height: 200px
    }
}

/* Add any styles for large screens here */
@media only screen and (min-width: 1024px) {

    /* Add styles for screens larger than 1024 pixels (desktops) here */
    #landing-page {
        width: 80%;
        margin: auto;
        display: flex;
        flex-direction: row;
        justify-content: center;
    }

    #submitBtn {
        background-color: #7093A7;
        color: white;
    }
}

